feat: add chargepoly custom code

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "auto-load": "3.0.4",
     "aws-sdk": "2.1309.0",
     "azure-search-client": "3.1.5",
+    "bcrypt": "5.1.1",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
     "body-parser": "1.20.1",
@@ -72,6 +73,7 @@
     "diff": "4.0.2",
     "diff2html": "3.1.14",
     "dompurify": "2.4.3",
+    "dotenv": "16.4.5",
     "dotize": "0.3.0",
     "elasticsearch6": "npm:@elastic/elasticsearch@6",
     "elasticsearch7": "npm:@elastic/elasticsearch@7",
