--- a/dev/containers/docker-compose.yml
+++ b/dev/containers/docker-compose.yml
@@ -1,6 +1,3 @@
-# -- DEV DOCKER-COMPOSE --
-# -- DO NOT USE IN PRODUCTION! --
-
 version: "3"
 services:
   db:
@@ -8,36 +5,14 @@ services:
     image: postgres:15-alpine
     environment:
       POSTGRES_DB: wiki
-      POSTGRES_PASSWORD: wikijsrocks
-      POSTGRES_USER: wikijs
+      POSTGRES_PASSWORD: chargepolySecret
+      POSTGRES_USER: postgreadmin
     logging:
       driver: "none"
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
-      - "15432:5432"
-
-  adminer:
-    container_name: wiki-adminer
-    image: adminer:latest
-    logging:
-      driver: "none"
-    ports:
-      - "3001:8080"
-
-  # solr:
-  #   container_name: wiki-solr
-  #   image: solr:7-alpine
-  #   logging:
-  #     driver: "none"
-  #   ports:
-  #     - "8983:8983"
-  #   volumes:
-  #     - solr-data:/opt/solr/server/solr/mycores
-  #   entrypoint:
-  #     - docker-entrypoint.sh
-  #     - solr-precreate
-  #     - wiki
+      - "5432:5432"
 
   wiki:
     container_name: wiki-app
@@ -56,4 +31,3 @@ services:
 
 volumes:
   db-data:
-  # solr-data:
