--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "i18next-express-middleware": "2.0.0",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.9.2",
+    "joi": "17.13.1",
     "js-base64": "3.7.4",
     "js-binary": "1.2.0",
     "js-yaml": "3.14.0",
