fix: edit .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 API_KEY=
-API_KEY_NAME=
+API_KEY_NAME=Oslo-API
 
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
 DEFAULT_USER_EMAIL=
 DEFAULT_USER_PASSWORD=
+
+DEFAULT_CONTENT_CREATOR_EMAIL=
+DEFAULT_CONTENT_CREATOR_PASSWORD=
 
 HOST=
